--- a/assets/cms/css/nui.css
+++ b/assets/cms/css/nui.css
@@ -56,34 +56,81 @@ a:not([href]):not([class]):hover {
     text-decoration: none
 }
 
-table{
+table {
     width: 100%;
     border-spacing: 15px 10px;
     caption-side: top;
     margin: 10px 5px;
+    background-color: #f8f8f8;
 }
 
-table, th, td {
-    border: 1px solid var(--bs-gray);
+table,
+th,
+td {
+    border: 1px solid #8e8c8c;
 }
-blockquote{
+
+blockquote {
     padding: 20px;
     border-left: 6px #e7e6e6 solid;
+    background-color: #f1f1f1;
 }
-#quick{ position: fixed; right: 20px; top:140px; text-align: left; background-color: #e8e8e8; z-index: 99;}
-    #quick{ font-size: 18px; color: #4a4847;}
-    #quick a{ font-size: 14px; padding: 10px 0; font-weight: bold; cursor: pointer; color: #333;}
-    #quick a:hover{ color: #255fd2;}
-    #quick li li a{ font-weight: normal; color: #666;}
-    #quick li li li a{ font-weight: normal; color: #8e8c8c;}
-        
+
+#quick {
+    position: fixed;
+    right: 20px;
+    top: 140px;
+    text-align: left;
+    background-color: #f7f7f7;
+    z-index: 99;
+}
+
+#quick {
+    font-size: 18px;
+    color: #4a4847;
+}
+
+#quick a {
+    font-size: 14px;
+    padding: 10px 0;
+    font-weight: bold;
+    cursor: pointer;
+    color: #333;
+}
+
+#quick a:hover {
+    color: #255fd2;
+}
+
+#quick li li a {
+    font-weight: normal;
+    color: #666;
+}
+
+#quick li li li a {
+    font-weight: normal;
+    color: #8e8c8c;
+}
+#ztreebox{
+    top: 140px;
+
+}
+.tips{
+    padding: 3px 5px ;
+    background-color: #ffecc7;
+    border-radius: 0.3rem;
+}
+.tips::before {
+    content: '  TIPS: ';
+}
+
 /**-------------------------------------------
  * body style
  */
- 
- .github-corner{
-    z-index: 9999999999999999999999;
- }
+
+.github-corner {
+    z-index: 999999999;
+}
 
 .github-corner:hover .octo-arm {
     animation: octocat-wave 560ms ease-in-out
@@ -241,19 +288,11 @@ blockquote{
     background-color: hsla(0, 0%, 100%, .75) !important;
 }
 
-.shadow {
-    box-shadow: 0 .25rem .375rem -.0625rem hsla(0, 0%, 8%, .12), 0 .125rem .25rem -.0625rem hsla(0, 0%, 8%, .07) !important;
-}
-
-.shadow-blur {
-    box-shadow: inset 0 0 1px 1px hsla(0, 0%, 100%, .9), 0 20px 27px 0 rgba(0, 0, 0, .05) !important
-}
-
 
 .navbar {
     box-shadow: 0 2px 12px 0 rgba(0, 0, 0, .18);
     z-index: 999999999;
-    margin: 0 10%;
+    margin: auto 10%;
 }
 
 .navbar-light .navbar-toggler {
@@ -555,7 +594,7 @@ blockquote{
     height: 16vh;
     margin-bottom: -7px;
     min-height: 100px;
-    max-height:100px
+    max-height: 100px
 }
 
 .waves.waves-sm {
